BMSSimplificationEclipseWS/EUFULL-Org-Backup/src/objects/Approved_Email_Settings_vod__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>ADD_RECIPIENTS_vod__c</fullName>
        <defaultValue>&quot;0&quot;</defaultValue>
        <description>This setting determines if User can add recipients from within Approved Email.</description>
        <label>Additional Recipients</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APPROVED_EMAIL_CONSENT_MODE_vod__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Determines whether or not the old Email opt in button is visible to user when Consent Capture is enabled on mobile devices. When 0, existing behavior. When 1, hide Email Opt in button on mobile devices.</description>
        <label>Approved Email Consent Mode</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APPROVED_EMAIL_CONSENT_TEXT_vod__c</fullName>
        <defaultValue>&quot;APPROVED_EMAIL_CONSENT_TEXT;;ApprovedEmail&quot;</defaultValue>
        <description>Holds the consent message adjacent to the confirmation checkbox to be shown on the opt in/out screen.</description>
        <label>Approved Email Consent Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APPROVED_EMAIL_COUNT_LIMIT_vod__c</fullName>
        <defaultValue>5</defaultValue>
        <description>A warning is displayed to the user when count of emails sent &gt; the value in APPROVED_EMAIL_COUNT_LIMIT_vod over the value in APPROVED_EMAIL_DURATION_LIMIT_vod.</description>
        <label>Approved Email Volume-Count Threshold</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APPROVED_EMAIL_DISCLAIMER_TEXT_vod__c</fullName>
        <defaultValue>&quot;APPROVED_EMAIL_DISCLAIMER_TEXT;;ApprovedEmail&quot;</defaultValue>
        <description>Holds the disclaimer message to be shown on the opt in/out screen.</description>
        <label>Approved Email Opt-in Disclaimer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APPROVED_EMAIL_DOMAIN_vod__c</fullName>
        <description>This is the sending domain of emails generated by AE. This domain must be setup in the email engine, and SPF, DKIM and CNAME records created in the customer&apos;s DNS for it to be fully functional and pass email authentication tests.
This is a string of a domain name, eg customer.com or email.customer.com</description>
        <label>Approved Email Domain</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APPROVED_EMAIL_DURATION_LIMIT_vod__c</fullName>
        <defaultValue>30</defaultValue>
        <description>A warning is displayed to the user when count of emails sent &gt; the value in APPROVED_EMAIL_COUNT_LIMIT_vod over the value in APPROVED_EMAIL_DURATION_LIMIT_vod.</description>
        <label>Approved Email Volume-Duration Threshold</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APPROVED_EMAIL_FIELD_EXCLUSIONS_vod__c</fullName>
        <defaultValue>&quot;APPROVED_EMAIL_FIELD_EXCLUSIONS;;ApprovedEmail&quot;</defaultValue>
        <description>Delimited list of object.field references that should be excluded from the Core Email UI. All email values from these fields will be suppressed from the Approved Email UI. The setting values are persisted in the corresponding Veeva Message</description>
        <label>Approved Email Field Exclusion List</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APPROVED_EMAIL_FILTER_FIELDS_vod__c</fullName>
        <defaultValue>&quot;APPROVED_EMAIL_FILTER_FIELDS;;ApprovedEmail&quot;</defaultValue>
        <description>This field holds the values of the fields that are show up as filters on Approved Email page. Default value is to reference a Veeva Message of the same name.</description>
        <label>Approved Email Filter Fields</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APPROVED_EMAIL_RESTRICTED_WORDS_vod__c</fullName>
        <defaultValue>&quot;APPROVED_EMAIL_RESTRICTED_WORDS;;ApprovedEmail&quot;</defaultValue>
        <description>Filters on words or phrases entered in a free text field on an email template. When there&apos;s a match, a visible error is displayed and the email cannot be sent. Double semi-colon is the delimiter, eg: test;;test2;;this is a phrase</description>
        <label>Approved Email Restricted Words</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APPROVED_EMAIL_TEST_ADDRESS_vod__c</fullName>
        <description>This is an org-level override to support sandbox testing. When an email address value is present, all Approved Emails generated will be sent to this address. This overrides the value set in Sent_Email_vod.Account_Email_vod</description>
        <label>Approved Email Test Email Address</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APPROVED_EMAIL_VAULT_ENDPOINTS_vod__c</fullName>
        <defaultValue>&quot;APPROVED_EMAIL_VAULT_ENDPOINTS;;ApprovedEmail&quot;</defaultValue>
        <description>This is a delimited list of Vault endpoints to be used by the Approved Email process to pull documents into the Approved Documents object. Requires that a SFDC user be created and registered within the Vault domain security profile. The query string values are persisted in the corresponding Veeva Message</description>
        <label>Approved Email Vault Endpoints</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APPROVED_EMAIL_VAULT_QUERY_vod__c</fullName>
        <defaultValue>&quot;APPROVED_EMAIL_VAULT_QUERY;;ApprovedEmail&quot;</defaultValue>
        <description>This is a delimited list of Vault query strings. The order of the strings maps to the order of the endpoints. The query string values are persisted in the corresponding Veeva Message</description>
        <label>Approved Email Vault Query</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DISABLED_APPROVED_EMAIL_ENTRYPOINTS_vod__c</fullName>
        <description>List of entry points disabled for Approved Email</description>
        <label>Disabled Approved Email Entry Points</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ENABLE_APPROVED_EMAIL_RECEIPTS_vod__c</fullName>
        <defaultValue>0</defaultValue>
        <description>0 = feature is disabled
1 = feature is enabled</description>
        <label>Enable Approved Email Receipts</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ENABLE_GROUP_EMAIL_vod__c</fullName>
        <defaultValue>0</defaultValue>
        <description>0 = Feature Disabled
1 = Feature Enabled</description>
        <label>Enable Group Email</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>120</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>MULTICHANNEL_EXPLICIT_OPT_IN_vod__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Determines NULL behavior of Account.Multi_Channel_Opt_Type_vod attribute. If FALSE, Approved Email Opt-In is not required for Accounts. When TRUE, Approved Email Opt-In is required for Accounts, and an opt-in record must be present in MultiChannel_Consent_vod before email will be sent.</description>
        <label>Approved Email Opt-in Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RECIPIENT_NAME_IN_EMAIL_HEADER_vod__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Include the recipient&apos;s name in the email. If RECIPIENT_NAME_IN_EMAIL_HEADER_vod = 1, the To: field should contain just the email address nishant@veeva.com, instead of having both the name and the email address, eg Nishant Bafna nishant@veeva.com.</description>
        <label>Recipient Name in Email Header</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RECIPIENT_SPECIFIC_FIELDS_vod__c</fullName>
        <defaultValue>&quot;APPROVED_EMAIL_RECIPIENT_SPECIFIC_FIELDS;;ApprovedEmail&quot;</defaultValue>
        <description>List of fields that when on the pagelayout are available as recipient specific fields.</description>
        <label>Recipient Specific Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Timeline_View_Email_Link_vod__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This setting restricts when the &quot;View Email&quot; link displays from the expanded view on Sent Email details on the Timeline
0 - Everyone (default)
1 - Owner and Above in Hierarchy
2 - Owner Only</description>
        <label>Timeline View Email Link</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Approved Email Settings</label>
</CustomObject>